[package]
name = "linode-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = "0.24.1"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking","json","rustls-tls"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt-multi-thread"] }